--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Maps/Level_1.Level_1
 
 
 EditorStartupMap=/Game/Maps/Level_1.Level_1
+GlobalDefaultGameMode=/Game/Blueprints/BrickGameMode.BrickGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
