Completed the game

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,4 +17,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/BrickBreaker3D")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/BrickBreaker3D")
+bUseFixedFrameRate=True
+FixedFrameRate=75.000000
+
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+bEnableDynamicMaxFPS=False
 
